# expense-tracker-mcp

./: .env  .env_example  .gitignore  CURRENCY_SETUP.md  MCP_REFERENCE.md  README.md  config.json  expenses.db  fastmcp.json  main.py  pyproject.toml  test_currency_conversion.py
app/: __init__.py  constants.py  exceptions.py  logger.py  mcp_tools.py  validators.py
app/config/: settings.py
app/database/: db.py  repositories.py
app/models/: expense.py
app/services/: currency_service.py  expense_service.py  summary_service.py
tests/: conftest.py  test_currency_service.py  test_database.py  test_expense_service.py  test_models.py  test_summary_service.py  test_validators.py
